# Hebrew-LLM-Eval

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  create_corpus.py  create_keyboard_graph.py  generate_summaries.py  main.py  pyproject.toml  requirements.txt  train_fasttext.py
.github/workflows/: python-app.yml
Data/: data_exploration.py  data_labeling.py  data_with_topics.py  openai_data_creation.py  topic_stance_dataset.py
Data/output/: batch_output.json  categorized_topics.json  categorized_topics_.json  labeled_data.json  me5_summarization-7-heb.jsonl_metadata_20250305_195549.csv  stance_preservation.csv  (+1 more)
next_sentence_prediction/: train_model.py
scripts/: augment_summaries.py  augmentation_visualizer.py  clean_pipeline.py  create_summaries.py  create_summaries_eng.py  data_labeling.py  dicta_finetuning.py  eval_coherence.py  finetuning_dicta.py  old_dicta_finetuning.py  old_stance_pipeline.py  sentance_matching.py  sentence_matching.py  stance_detection_model.py  stance_detection_without_one_topic.py  stance_pipeline.py  topic_detection.py  topic_detection_train.py  train_nsp.py  train_sentence_ordering.py
sentence_ordering/: train_model.py
src/: augmentations.py  data_loader.py  data_utils.py  datasets.py  train_utils.py  utils.py
src/gui/: highlighter.py  (+2 more)
tests/: LLM_baseline.py  article_level_statistical_tests.py  cos_sim_base_line.py  cv_model_test.py  emb_sim_base_line.py  external_baseline.py  mean_sentence_article_statistical_tests.py  model_tests.py  pipeline_tests.py  score.py  similarity_baselines.py  topic_stance_model_test.py
(+37 files in other folders)
