[project]
name = "hebrew-llm-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eyal Mazuz", email = "mazuzeyal@protonmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "evaluate>=0.4.3",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "tokenizers>=0.21.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.50.3",
    "wandb>=0.19.9",
]

[project.scripts]
eich = "hebrew_llm_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.3",
]
